Conexion y Repositorios implementados (PONER CADENA DE CONEXION CORRECTA)

--- a/ERP-Back/ERP-Back.csproj
+++ b/ERP-Back/ERP-Back.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Controllers\API\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
+  </ItemGroup>
+
 </Project>
