--- a/ERP-Back/appsettings.json
+++ b/ERP-Back/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  //Poner conexion correcta a la base de datos
+  {
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=localhost;Database=erp_db;User=root;Password=TU_PASSWORD;"
+    }
+  }
   "AllowedHosts": "*"
 }
