--- a/ERP-Back/appsettings.json
+++ b/ERP-Back/appsettings.json
@@ -8,7 +8,7 @@
   //Poner conexion correcta a la base de datos
   {
     "ConnectionStrings": {
-      "DefaultConnection": "Server=localhost;Database=erp_db;User=root;Password=TU_PASSWORD;"
+      "DefaultConnection": "server=hugod.database.windows.net;database=PersonasDB;uid=prueba;pwd=abc123@@@;trustServerCertificate = "true;";
     }
   }
   "AllowedHosts": "*"
